# gha-eks

./: .gitignore  Dockerfile  README.md  docker-entrypoint.sh
.github/workflows/: deploy-app.yml
ansible/: build_docker_ecr.yml  create_lambda.yml  site.yml
ansible/geerlingguy.pip/meta/: .galaxy_install_info
ansible/inventory/dev/: hosts
ansible/inventory/dev/group_vars/: all.yml
ansible/inventory/local/group_vars/: all.yml
ansible/inventory/prod/group_vars/: all.yml  prod.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/container_build_push/defaults/: main.yml
ansible/roles/container_build_push/tasks/: main.yml
ansible/roles/create_ecr_repo/defaults/: main.yml
ansible/roles/create_ecr_repo/tasks/: main.yml
ansible/roles/ecs_fargate/files/: policy.json
ansible/roles/ecs_fargate/tasks/: main.yml
ansible/roles/ecs_fargate/vars/: main.yml
ansible/roles/geerlingguy.docker/meta/: .galaxy_install_info
ansible/roles/geerlingguy.ecr_container_build/tasks/: main.yml
ansible/roles/rds/tasks/: main.yml
ansible/roles/rds/vars/: main.yml
ansible/roles/vpc/defaults/: main.yml
ansible/roles/vpc/tasks/: main.yml
app-src/: README.md
app-src/src/fastapi_demo/features/users/: models.py  views.py
task-app/: pyproject.toml
task-app/src/fastapi_demo/: main.py
task-app/src/fastapi_demo/features/tasks/: views.py
